Добавил alt для лого

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                         <tr>
                                             <td width="29" rowspan="2">&nbsp;</td>
                                             <td height="150" valign="middle" rowspan="2">
-                                                <img src="img/logo.png" width="265" height="88" alt="">
+                                                <img src="img/logo.png" width="265" height="88" alt="PresentStar - Необычные подарки">
                                             </td>
                                             <td valign="bottom" style="font-weight: 700;" align="right">
                                                 +7(495) 021-25-25
