Добавил утерянное меню

--- a/index.html
+++ b/index.html
@@ -42,6 +42,34 @@
                             </td>
                         </tr>
                         <tr>
+                            <td width="100%">
+                                <table style="border-collapse: collapse; color: #ffffff; background-color:#f77600; text-transform: uppercase; font-size: 15px; line-height: 24px; font-weight: 700;" bgcolor="#f77600" width="100%">
+                                    <tr>
+                                        <td align="center"  width="25%" height="40" style="border:1px solid #ffffff">
+                                            <a href="#" style="text-decoration: none; color:#ffffff;" target="_blank">Для него
+                                                <img src="img/emoji-man.png" width="25" height="25" valign="middle">
+                                            </a>
+                                        </td>
+                                        <td align="center" width="25%" height="40" style="border:1px solid #ffffff">
+                                            <a href="#" style="text-decoration: none; color:#ffffff;" target="_blank">Для неё
+                                                <img src="img/emoji-woman.png" width="25" height="25" valign="middle">
+                                            </a>
+                                        </td>
+                                        <td align="center" width="25%" height="40" style="border:1px solid #ffffff">
+                                            <a href="#" style="text-decoration: none; color:#ffffff;" target="_blank">Для двоих
+                                                <img src="img/emoji-heart.png" width="25" height="25" valign="middle">
+                                            </a>
+                                        </td>
+                                        <td align="center" width="25%" height="40" style="border:1px solid #ffffff">
+                                            <a href="#" style="text-decoration: none; color:#ffffff;" target="_blank">Наборы
+                                                <img src="img/emoji-gift.png" width="25" height="25" valign="middle">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <tr>
                             <td style="background-image:url('img/background-main.jpg'); background-repeat: no-repeat; background-color:#745a46; color:#ffffff; " width="100%" height="380" bgcolor="#745a46">
                                 <table>
                                     <tr>
