changed emoji-man to low res version, further adjusted margin between blocks

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                                                 <img src="img/logo.png" width="265" height="88" alt="PresentStar - Необычные подарки" style="display:block;">
                                             </td>
                                             <td valign="bottom" style="font-weight: 700;" align="right">
-                                                <span style="font-family:Tahoma, Geneva, sans-serif; font-size: 16px; line-height: 24px; color:#ffffff; ">+7(495) 021-25-25</span>
+                                                <span style="font-family:Tahoma, Geneva, sans-serif; font-size: 16px; line-height: 24px; color:#ffffff; ">+7 (495) 021-25-25</span>
                                             </td>
                                             <td rowspan="2" width="30">&nbsp;</td>
                                         </tr>
                                         <tr>
                                             <td valign="top" align="right">
-                                                <span style="font-family:Tahoma, Geneva, sans-serif; font-size: 16px; line-height: 24px; color:#ffffff; ">Пн-Вс с 9:00 до&nbsp;21:00</span>
+                                                <span style="font-family:Tahoma, Geneva, sans-serif; font-size: 16px; line-height: 24px; color:#ffffff; ">Пн-Вс с 09:00 до&nbsp;21:00</span>
                                             </td>
                                         </tr>
                                     </table>
@@ -45,9 +45,9 @@
                             <td width="100%">
                                 <table style="border-collapse: collapse; background-color:#f77600; text-transform: uppercase; " bgcolor="#f77600" width="100%">
                                     <tr>
-                                        <td align="center"  width="25%" height="40" style="border:1px solid #ffffff">
+                                        <td align="center" width="25%" height="40" style="border:1px solid #ffffff">
                                             <a href="#" style="font-family:Tahoma, Geneva, sans-serif;color: #ffffff;text-transform: uppercase; text-decoration: none; color:#ffffff;font-size: 15px; line-height: 24px; font-weight: 700;" target="_blank">Для него
-                                                <img src="img/emoji-man.png" width="25" height="25" valign="middle">
+                                                <img src="img/emoji-man.png" width="20" height="25" valign="middle">
                                             </a>
                                         </td>
                                         <td align="center" width="25%" height="40" style="border:1px solid #ffffff">
@@ -70,8 +70,13 @@
                             </td>
                         </tr>
                         <tr>
-                            <td style="background-image:url('img/background-main.jpg'); background-repeat: no-repeat; background-color:#745a46; color:#ffffff; " width="100%" height="380" bgcolor="#745a46">
+                            <td valign="top" style="background-image:url('img/background-main.jpg'); background-repeat: no-repeat; background-color:#745a46; color:#ffffff; " width="100%" height="380" bgcolor="#745a46">
                                 <table width="100%" cellspacing="0" cellpadding="0">
+                                    <tr>
+                                        <td colspan="4" height="60">
+                                            &nbsp;
+                                        </td>
+                                    </tr>
                                     <tr>
                                         <td width="29" rowspan="7">&nbsp;</td>
                                         <td colspan="2" >
@@ -234,7 +239,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td align="center">
-                                                            <span style="font-size: 18px; font-weight: 400;"><strike>18 000 ₽</strike></span><br>
+                                                            <span style="font-size: 18px; line-height: 20px;font-weight: 400;"><strike>18 000 ₽</strike></span><br>
                                                             <span style="font-size: 20px; line-height: 24px;">15 300 ₽ <span valign="middle" style="font-family:Verdana, Geneva, sans-serif;font-size: 12px; line-height: 21px; text-transform: uppercase;font-weight: 700; background-color: #f24841; color:#ffffff; border-radius: 3px;">&nbsp;-15%&nbsp;</span></span>
                                                         </td>
                                                     </tr>
@@ -347,7 +352,7 @@
                             <td bgcolor="#ffffff" style="background-color: #ffffff">
                                 <table style="border-collapse: collapse;" cellspacing="0" cellpadding="0">
                                     <tr>
-                                        <td align="center" colspan="7" style="padding: 45px 0 20px;">
+                                        <td align="center" colspan="7" style="padding: 45px 0 25px;">
                                             <span style="font-family:Tahoma, Geneva, sans-serif;color:#fe7201; font-size: 22px; line-height: 24px; font-weight: 700; text-transform: uppercase;">Выберите свой вариант из категорий</span>
                                         </td>
                                     </tr>
@@ -400,20 +405,20 @@
                             <td bgcolor="#ffffff" style="background-color:#ffffff;">
                                 <table style="border-collapse: collapse;" cellspacing="0" cellpadding="0">
                                     <tr>
-                                        <td width="32" rowspan="2">
+                                        <td width="32" rowspan="2" height="170">
                                             &nbsp;
                                         </td>
                                         <td align="center" valign="middle" width="170" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:25px 0 0 0;">
                                             <img src="img/category-4.jpg" width="37" height="72" alt="" style="display:block;">
                                         </td>
-                                        <td width="11" rowspan="2">
+                                        <td width="11" rowspan="2" height="170">
                                             &nbsp;
                                         </td>
                                         <td align="center" width="238" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:25px 0 0 0;">
                                             <img src="img/category-5.jpg" width="82" height="62" alt="" style="display:block;">
                                                 
                                         </td>
-                                        <td width="11" rowspan="2">
+                                        <td width="11" rowspan="2" height="170">
                                             &nbsp;
                                         </td>
                                         <td align="center" valign="middle" bgcolor="#eef2f4" width="170" style="background-color:#eef2f4;padding:25px 0 0 0;">
@@ -424,17 +429,17 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4; padding:0 0 18px 0;">
+                                        <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4; padding:10px 0 0;">
                                             <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700;">Для него</span><br>
-                                            <span style="font-size: 13px; line-height: 18px;">Территория мужских впечатлений</span>
+                                            <span style="font-size: 13px; line-height: 16px;">Территория мужских впечатлений</span>
                                         </td>
-                                        <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:0 0 18px 0;">
+                                        <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:10px 0 0;">
                                             <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700;">Милитари</span><br>
-                                            <span style="font-size: 13px; line-height: 18px;">Имитация военных действий с<br>настоящими эмоциями</span>
+                                            <span style="font-size: 13px; line-height: 16px;">Имитация военных действий с<br>настоящими эмоциями</span>
                                         </td>
-                                        <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:0 0 18px 0;">
+                                        <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:10px 0 0;">
                                             <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700;">Для неё</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 18px;">Впечатления, которые<br>ей понравятся</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 16px;">Впечатления, которые<br>ей понравятся</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -481,7 +486,7 @@
                                             <td rowspan="7" width="35">
                                                 &nbsp;
                                             </td>
-                                            <td colspan="2" style="padding: 0 0 40px 0 ;">
+                                            <td colspan="2" style="padding: 0 0 35px 0 ;">
                                                 <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 24px; color:#999999;">*Скидки по промокодам, скидочной карте и специальным предложениям не суммируются.</span>
                                             </td>
                                         </tr>
