removed duplicate attributes

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td align="center" valign="top" width="270" align="center" bgcolor="#edf7f8" style=" background-color:#edf7f8; text-transform: uppercase;font-weight: 700; padding: 0 0 20px 0;">
+                                            <td align="center" valign="top" width="270" bgcolor="#edf7f8" style=" background-color:#edf7f8; text-transform: uppercase;font-weight: 700; padding: 0 0 20px 0;">
                                                 <table style="border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
                                                     <tr>
                                                         <td align="center">
@@ -250,7 +250,7 @@
                                                     </tr>
                                                 </table>
                                             </td>
-                                            <td align="center" valign="top" width="270" align="center" bgcolor="#edf7f8" style="text-transform: uppercase; background-color:#edf7f8; font-weight: 700; padding: 0 0 20px 0;">
+                                            <td align="center" valign="top" width="270" bgcolor="#edf7f8" style="text-transform: uppercase; background-color:#edf7f8; font-weight: 700; padding: 0 0 20px 0;">
                                                 <table style="border-collapse: collapse; " cellspacing="0" cellpadding="0" border="0">
                                                     <tr>
                                                         <td align="center">
@@ -284,7 +284,7 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td align="center" valign="top" width="270" align="center" bgcolor="#edf7f8" style="text-transform: uppercase; background-color:#edf7f8; font-weight: 700; padding: 0 0 10px 0;">
+                                            <td align="center" valign="top" width="270" bgcolor="#edf7f8" style="text-transform: uppercase; background-color:#edf7f8; font-weight: 700; padding: 0 0 10px 0;">
                                                 <table style="border-collapse: collapse; " cellspacing="0" cellpadding="0" border="0">
                                                     <tr>
                                                         <td align="center">
@@ -308,7 +308,7 @@
                                                     </tr>
                                                 </table>
                                             </td>
-                                            <td align="center" valign="top" width="270" align="center" bgcolor="#edf7f8" style="text-transform: uppercase; background-color:#edf7f8; font-weight: 700; padding: 0 0 10px 0;">
+                                            <td align="center" valign="top" width="270" bgcolor="#edf7f8" style="text-transform: uppercase; background-color:#edf7f8; font-weight: 700; padding: 0 0 10px 0;">
                                                 <table style="border-collapse: collapse; " cellspacing="0" cellpadding="0" border="0">
                                                     <tr>
                                                         <td align="center">
