added colors  to text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                             <img src="img/logo.png" width="265" height="88" alt="PresentStar - Необычные подарки" style="display:block;">
                                         </td>
                                         <td valign="bottom" style="font-weight: 700;" align="right">
-                                            <a style="font-family:Tahoma, Geneva, sans-serif; font-size: 16px; line-height: 24px; color:#ffffff; text-decoration:none;">+7 (495) 021-25-25</a>
+                                            <a href="tel:+74950212525" style="font-family:Tahoma, Geneva, sans-serif; font-size: 16px; line-height: 24px; color:#ffffff; text-decoration:none;">+7 (495) 021-25-25</a>
                                         </td>
                                         <td rowspan="2" width="30">&nbsp;</td>
                                     </tr>
@@ -170,12 +170,12 @@
                                                     </tr>
                                                     <tr>
                                                         <td align="center" style="padding: 20px 0 5px;">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif; text-transform: uppercase; font-weight: 700; font-size: 15px; line-height: 18px;">Подарочный набор <br>«Классика жанра» для <br>него</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif; text-transform: uppercase; font-weight: 700; font-size: 15px; line-height: 18px; color: #333333">Подарочный набор <br>«Классика жанра» для <br>него</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td align="center" style="padding: 0 0 5px">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif; text-transform: uppercase; font-weight: 700; font-size: 20px; line-height: 24px;">6 400 ₽</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif; text-transform: uppercase; font-weight: 700; font-size: 20px; line-height: 24px; color: #333333">6 400 ₽</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -197,12 +197,12 @@
                                                     </tr>
                                                     <tr>
                                                         <td align="center" style="padding: 20px 0 5px;">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;">Подарочный набор<br>«Классика жанра» для<br>двоих</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;color: #333333">Подарочный набор<br>«Классика жанра» для<br>двоих</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td align="center" style="padding: 0 0 5px">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 20px; line-height: 24px;">6 900 ₽</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 20px; line-height: 24px;color: #333333">6 900 ₽</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -234,13 +234,13 @@
                                                     </tr>
                                                     <tr>
                                                         <td align="center" style="padding: 20px 0 5px;">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;text-transform: uppercase;font-weight: 700;">Сафари на<br>бронетранспортере</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;text-transform: uppercase;font-weight: 700; color: #333333">Сафари на<br>бронетранспортере</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td align="center">
-                                                            <span style="font-size: 15px; line-height: 16px;font-weight: 400;"><strike>18 000 ₽</strike></span><br>
-                                                            <span style="font-size: 20px; line-height: 24px;">15 300 ₽ <span valign="middle" style="font-family:Verdana, Geneva, sans-serif;font-size: 12px; line-height: 21px; text-transform: uppercase;font-weight: 700; background-color: #f24841; color:#ffffff; border-radius: 3px;">&nbsp;-15%&nbsp;</span></span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 16px;font-weight: 400; color: #333333;"><strike>18 000 ₽</strike></span><br>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 20px; line-height: 24px;color: #333333;">15 300 ₽ <span valign="middle" style="font-family:Verdana, Geneva, sans-serif;font-size: 12px; line-height: 21px; text-transform: uppercase;font-weight: 700; background-color: #f24841; color:#ffffff; border-radius: 3px;">&nbsp;-15%&nbsp;</span></span>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -259,12 +259,12 @@
                                                     </tr>
                                                     <tr>
                                                         <td align="center" style="padding: 20px 0 45px;">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;text-transform: uppercase;font-weight: 700;">Катание на&nbsp;квадроцикле</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;text-transform: uppercase;font-weight: 700;color: #333333;">Катание на&nbsp;квадроцикле</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td align="center" style="padding:0 0 0;">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 20px; line-height: 24px;text-transform: uppercase;font-weight: 700;">7 500 ₽</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 20px; line-height: 24px;text-transform: uppercase;font-weight: 700;color: #333333;">7 500 ₽</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -293,12 +293,12 @@
                                                     </tr>
                                                     <tr>
                                                         <td align="center" style="padding: 20px 0 25px;">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;text-transform: uppercase;font-weight: 700;">Сертификат на&nbsp;конную<br>прогулку</span><br>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;text-transform: uppercase;font-weight: 700; color: #333333;">Сертификат на&nbsp;конную<br>прогулку</span><br>
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td align="center">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 20px; line-height: 24px;text-transform: uppercase;font-weight: 700;">4 500 ₽</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 20px; line-height: 24px;text-transform: uppercase;font-weight: 700;color: #333333;">4 500 ₽</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -317,12 +317,12 @@
                                                     </tr>
                                                     <tr>
                                                         <td align="center" style="padding: 20px 0 25px;">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;text-transform: uppercase;font-weight: 700;">Тайны московских<br>подземелий</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px;text-transform: uppercase;font-weight: 700; color: #333333;">Тайны московских<br>подземелий</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td align="center">
-                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 20px; line-height: 24px;text-transform: uppercase;font-weight: 700;">2 900 ₽</span>
+                                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 20px; line-height: 24px;text-transform: uppercase;font-weight: 700; color: #333333;">2 900 ₽</span>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -381,16 +381,16 @@
                                     </tr>
                                     <tr>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700;">Наборы «20 в 1»</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block;">Несколько услуг на&nbsp;выбор в&nbsp;одном подарке</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Наборы «20 в 1»</span><br>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Несколько услуг на&nbsp;выбор в&nbsp;одном подарке</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700;">VIP</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block;">Впечатления для&nbsp;самых притязательных</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">VIP</span><br>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Впечатления для&nbsp;самых притязательных</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700;">Полеты</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block;">Воздушные программы</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Полеты</span><br>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Воздушные программы</span>
                                         </td>
                                     </tr>
                                 </table>
@@ -430,16 +430,16 @@
                                     </tr>
                                     <tr>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4; padding:10px 0 0;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700;">Для него</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block;">Территория мужских впечатлений</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Для него</span><br>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Территория мужских впечатлений</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:10px 0 0;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700;">Милитари</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block;">Имитация военных действий с<br>настоящими эмоциями</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Милитари</span><br>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Имитация военных действий с<br>настоящими эмоциями</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:10px 0 0;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700;">Для неё</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block;">Впечатления, которые<br>ей понравятся</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Для неё</span><br>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Впечатления, которые<br>ей понравятся</span>
                                         </td>
                                     </tr>
                                     <tr>
