added link to the footer, changed video link

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                     <br><br>
                                     Валерия, Дмитрий и&nbsp;сын Михаил  <span style="color:#818181">•  25 января 2021</span>
                                     <br><br>
-                                    <a href="#" target="_blank"><img src="img/video.jpg" width="456" height="326" alt="Ссылка на видео с отзывом" style="display:block;"></a>
+                                    <a href="#" target="_blank" style="text-decoration: none;"><img src="img/video.jpg" width="456" height="326" alt="Ссылка на видео с отзывом" style="display:block;border:0;"></a>
                                 </span>
                             </td>
                         </tr>
@@ -494,7 +494,7 @@
                                             <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 18px; color: #999999;">PRESENTSTAR — интернет-магазин<br> оригинальных и необычных подарков.<br>Корпоративные подарки для начальников <br>и&nbsp;руководителей.</span>
                                         </td>
                                         <td valign="top" style="line-height: 18px;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 18px; color: #999999;">125040, Москва, ул.&nbsp;Скаковая д.17 стр.1<br>м. Белорусская / Схема проезда</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 18px; color: #999999;">125040, Москва, ул.&nbsp;Скаковая д.17 стр.1<br>м. Белорусская / <a href="#" style="color: #999999;">Схема проезда</a></span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -504,7 +504,7 @@
                                     </tr>
                                     <tr>
                                         <td colspan="2">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 20px; color: #999999;">Вы&nbsp;получили это&nbsp;письмо, потому что&nbsp;подписались на&nbsp;рассылку на&nbsp;сайте presentstar.ru <br>Если Вы&nbsp;хотите отписаться, нажмите <a style="color:#999999;" href="#" target="blank">здесь</a>.</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 20px; color: #999999;">Вы&nbsp;получили это&nbsp;письмо, потому что&nbsp;подписались на&nbsp;рассылку на&nbsp;сайте <a style="text-decoration: none; color: #999999;">presentstar.ru</a> <br>Если Вы&nbsp;хотите отписаться, нажмите <a style="color:#999999;" href="#" target="blank">здесь</a>.</span>
                                         </td>
                                     </tr>
                                     <tr>
