--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#f3f3f3">
         <tr>
             <td>
-                <table style="border-collapse: collapse; font-family:Tahoma, Geneva, sans-serif;"  width="661" cellspacing="0" cellpadding="0"
+                <table style="border-collapse: collapse; font-family:Tahoma, Geneva, sans-serif;"  width="660" cellspacing="0" cellpadding="0"
                     align="center">
                    <tbody>
                         <tr>
@@ -26,7 +26,7 @@
                                     <tr>
                                         <td width="29" rowspan="2">&nbsp;</td>
                                         <td height="150" valign="middle" rowspan="2">
-                                            <img src="img/logo.png" width="265" height="88" alt="PresentStar - Необычные подарки" style="display:block;">
+                                            <a href="#" style="text-decoration: none;" target="_blank"><img src="img/logo.png" width="265" height="88" alt="PresentStar - Необычные подарки" style="display:block; border:0;"></a>
                                         </td>
                                         <td valign="bottom" style="font-weight: 700;" align="right">
                                             <a href="tel:+74950212525" style="font-family:Tahoma, Geneva, sans-serif; font-size: 16px; line-height: 24px; color:#ffffff; text-decoration:none;">+7 (495) 021-25-25</a>
@@ -62,7 +62,7 @@
                                         </td>
                                         <td align="center" width="25%" height="40" style="border:1px solid #ffffff">
                                             <a href="#" style="font-family:Tahoma, Geneva, sans-serif;color: #ffffff;text-transform: uppercase; text-decoration: none; color:#ffffff;font-size: 15px; line-height: 24px; font-weight: 700;" target="_blank">Наборы
-                                                <img src="img/emoji-gift.png" width="25" height="25" valign="middle">
+                                                <img src="img/emoji-gift.png" width="25" height="25" valign="middle" style="padding: 0 0 4px 0;">
                                             </a>
                                         </td>
                                     </tr>
@@ -158,7 +158,7 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td width="31" rowspan="5">
+                                            <td width="30" rowspan="5">
                                                 &nbsp;
                                             </td>
                                             <td align="center" valign="top" width="270" bgcolor="#edf7f8" style=" background-color:#edf7f8;padding: 0 0 20px 0;">
@@ -212,7 +212,7 @@
                                                     </tr>
                                                 </table>
                                             </td>
-                                            <td width="31" rowspan="5">
+                                            <td width="30" rowspan="5">
                                                 &nbsp;
                                             </td>
                                         </tr>
@@ -357,7 +357,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td width="32" rowspan="2" height="170px">
+                                        <td width="30" rowspan="2" height="170px">
                                             &nbsp;
                                         </td>
                                         <td align="center" valign="middle" bgcolor="#eef2f4" width="170" style="background-color:#eef2f4; padding:8px 0 0 0;">
@@ -375,22 +375,22 @@
                                         <td align="center" width="238" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:8px 0 0 0;">
                                             <img src="img/category-3.jpg" width="57" height="83" alt="" style="display:block;">
                                         </td>
-                                        <td width="32" rowspan="2">
+                                        <td width="30" rowspan="2">
                                             &nbsp;
                                         </td>
                                     </tr>
                                     <tr>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Наборы «20 в 1»</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Несколько услуг на&nbsp;выбор в&nbsp;одном подарке</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Наборы «20 в 1»</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;display: block; margin:0 0 3px;">Несколько услуг на&nbsp;выбор в&nbsp;одном подарке</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">VIP</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Впечатления для&nbsp;самых притязательных</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">VIP</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;display: block; margin:0 0 3px;">Впечатления для&nbsp;самых притязательных</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Полеты</span><br>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Воздушные программы</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Полеты</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;display: block; margin:0 0 3px;">Воздушные программы</span>
                                         </td>
                                     </tr>
                                 </table>
@@ -430,15 +430,15 @@
                                     </tr>
                                     <tr>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4; padding:10px 0 0;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Для него</span><br>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333; display: block; margin:0 0 3px;">Для него</span>
                                             <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Территория мужских впечатлений</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:10px 0 0;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Милитари</span><br>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;display: block; margin:0 0 3px;">Милитари</span>
                                             <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Имитация военных действий с<br>настоящими эмоциями</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;padding:10px 0 0;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Для неё</span><br>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;display: block; margin:0 0 3px;">Для неё</span>
                                             <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Впечатления, которые<br>ей понравятся</span>
                                         </td>
                                     </tr>
@@ -513,7 +513,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td colsan="2">
+                                        <td colspan="2">
                                             <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 20px; color: #999999;">© 2005 — 2021 ООО&nbsp;«Авангард»</span>
                                         </td>
                                     </tr>
